--- a/html/resource/main2024/css/main_2024/style.css
+++ b/html/resource/main2024/css/main_2024/style.css
@@ -106,6 +106,7 @@
 #newHeader .h_mobile_sns li a.play { background-image: url(../../../../page/images/main_2024/main/icon_playstore.png); } 
  
  #newMain .innerSection { max-width: 1260px; margin: 0 auto; } 
+ #newMain .fcRed { color: #ff0000 !important; } 
  #newMain h3.title { margin-bottom: 26px; color: #000; font-size: 26px; font-weight: 500; } 
  #newMain h3.title span { color: #2a61f9; } 
  #newMain .mainVisual { margin: 24px 0; } 
@@ -125,7 +126,7 @@
  #newMain .mainVisual .visualItem li a.vItem03::before { background: url(../../../../page/images/main_2024/main/visual_menu_03.png) center no-repeat; } 
  #newMain .mainVisual .visualItem li a.vItem04::before { background: url(../../../../page/images/main_2024/main/visual_menu_04.png) center no-repeat; } 
  #newMain .mainVisual .visualItem li a.vItem05::before { background: url(../../../../page/images/main_2024/main/visual_menu_05.png) center no-repeat; } 
- #newMain .mainVisual .visualItem li a.vItem06::before { background: url(../../../../page/images/main_2024/main/visual_menu_06.png) center no-repeat; }
+ #newMain .mainVisual .visualItem li a.vItem06::before { background: url(../../../../page/images/main_2024/main/visual_menu_06.png) center no-repeat; } 
  #newMain .mainVisual .visualItem li:hover { border-color: #2a61f9; border-radius: 20px; box-shadow: 2.192px 4.494px 5px 0px rgba(0, 0, 0, 0.25); } 
  #newMain .mainVisual .visualItem li:hover a { color: #000; font-weight: 900; } 
  #newMain .mainVisual .loginForm { width: 330px; } 
@@ -209,7 +210,7 @@
  #newMain .btnType.btnStyle01 { background: #f8f8f8; color: #000; border: 1px solid #d8d8d8; } 
  #newMain .btnType.btnStyle02 { background: #2a61f9; color: #fff; border: 1px solid #2a61f9; } 
  #newMain .topListWrap { display: flex; margin-bottom: 20px; align-items: center; } 
- #newMain .topListWrap .moreBtn { margin-left: auto; } 
+ #newMain .topListWrap .moreBtn { margin-left: auto; font-size: 13px; color: #777; } 
  #newMain .topListWrap .moreBtn:hover { color: #2a61f9; transition: all 0.35s; } 
  #newMain .noneData { display: flex; padding: 50px 10px; background: #f8f8f8; border-radius: 20px; align-items: center; justify-content: center; } 
  #newMain .slideWrap .item { background: #fff; border: 1px solid #dfdfdf; border-radius: 10px; box-sizing: border-box; } 
@@ -288,12 +289,12 @@
 #newMain .jobFindWrap .jobSelect .select_style01 { width: 100%; height: 38px; padding: 0 8px; background: #fff url(../../../../page/images/main_2024/main/ico_btn_style01.png) center right 10px no-repeat; color: #000; font-size: 14px; font-family: inherit; font-weight: 300; border: solid 1px #e2e2e2; border-radius: 5px; cursor: pointer; } 
 #newMain .orderWrap { padding: 65px 0; } 
 #newMain .jobSlideWrap.orderSlide .item { margin-top: 0 !important; margin-bottom: 30px; } 
-#newMain .infoWrap .infoSlide { max-width: 1180px; margin: 0 auto;}
+#newMain .infoWrap .infoSlide { max-width: 1180px; margin: 0 auto; } 
 #newMain .infoWrap { padding: 60px 0; background: #f6f6f6; } 
 #newMain .infoWrap .titWrap { display: flex; margin-bottom: 30px; align-items: center; } 
 #newMain .infoWrap .titWrap .title { margin-bottom: 0; } 
 #newMain .infoWrap .titWrap .liveTag { padding: 0 8px 0 20px; margin-left: 10px; background: url(../../../../page/images/main_2024/main/livedata_icon.png) center left 2px #fff no-repeat; color: #ff0000; font-size: 12px; font-weight: 500; border: 1px solid #ff0000; border-radius: 20px; } 
-#newMain .infoWrap ul a {display: block; padding-left: 60px;}
+#newMain .infoWrap ul a { display: block; padding-left: 60px; } 
 #newMain .infoWrap ul a.icon01 { background: url(../../../../page/images/main_2024/main/info_icon01.png) left center no-repeat; } 
 #newMain .infoWrap ul a.icon02 { background: url(../../../../page/images/main_2024/main/info_icon02.png) left center no-repeat; } 
 #newMain .infoWrap ul a.icon03 { background: url(../../../../page/images/main_2024/main/info_icon03.png) left center no-repeat; } 
@@ -318,14 +319,15 @@
  #newMain .jobSlideWrap .item .dateWrap .date { color: #777777; font-size: 12px; } 
  #newMain .jobSlideWrap .item .dateWrap .tag { display: block; padding: 4px 10px; margin-left: auto; background: #eeeeee; color: #000; font-size: 12px; font-weight: 300; border-radius: 5px; } 
  #newMain .jobSlideWrap .item .dateWrap .tag::before { content: ''; display: inline-block; margin-right: 4px; vertical-align: middle; } 
- #newMain .jobSlideWrap .item .dateWrap .tag.icon01::before {width: 11px; height: 15px; background: url(../../../../page/images/main_2024/main/tag_icon.png) no-repeat; } 
- #newMain .jobSlideWrap .item .dateWrap .tag.icon02::before {width: 14px; height: 15px; background: url(../../../../page/images/main_2024/main/tag_icon02.png) no-repeat; } 
+ #newMain .jobSlideWrap .item .dateWrap .tag.icon01::before { width: 11px; height: 15px; background: url(../../../../page/images/main_2024/main/tag_icon.png) no-repeat; } 
+ #newMain .jobSlideWrap .item .dateWrap .tag.icon02::before { width: 14px; height: 15px; background: url(../../../../page/images/main_2024/main/tag_icon02.png) no-repeat; } 
  #newMain .jobSlideWrap .item .listBottom { padding: 6px 20px 10px; border-top: 1px solid #dfdfdf; } 
  #newMain .jobSlideWrap .item .listBottom .etc { color: #777777; font-size: 12px; } 
  #newMain .enterWrap { padding: 65px 0; } 
  #newMain .jobSlideWrap.enterSlide .item { margin-top: 0 !important; margin-bottom: 30px; } 
  #newMain .recruitWrap { padding: 60px 0; background: #f3f4f7; } 
  #newMain .recruitWrap .recruitSlide .item { margin-top: 0 !important; margin-bottom: 30px; } 
+ #newMain .recruitWrap .item:hover a { box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1); } 
  #newMain .recruitWrap .item a { display: block; padding: 26px 40px; background-color: #fff; background-position: right 10px bottom 10px; background-repeat: no-repeat; border-radius: 10px; } 
  #newMain .recruitWrap .item a.type01 { background-image: url(../../../../page/images/main_2024/main/recruit_bg01.png); border: 1px solid #d02337; } 
  #newMain .recruitWrap .item a.type02 { background-image: url(../../../../page/images/main_2024/main/recruit_bg02.png); border: 1px solid #0a2d77; } 
@@ -395,11 +397,11 @@
 #newMain .moFindBtn .m_find_top .mo_cont_list button { display: block; width: 100%; height: 100%; background: #f3f3f3; color: #777777; font-size: 13px; border: none; } 
 #newMain .moFindBtn .m_find_top .mo_cont_list li.active button { background: #fff; } 
 #newMain .moFindBtn .m_find_top .mo_cont_Wrap { width: 100%; height: 140px; border: 1px solid #dfdfdf; border-top: none; border-right: none; overflow-y: scroll; } 
-#newMain .moFindBtn .m_find_top .mo_cont_Wrap.type02 {height: 245px;}
+#newMain .moFindBtn .m_find_top .mo_cont_Wrap.type02 { height: 245px; } 
 #newMain .moFindBtn .m_find_top .mo_cont_Wrap .mo_cont_box { display: none; } 
 #newMain .moFindBtn .m_find_top .mo_cont_Wrap .mo_cont_box.active { display: block; } 
-#newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .item { display: block; width: 100%; height: 35px; padding-left: 10px; background: #fff; border-bottom: 1px solid #e2e7ed; box-sizing: border-box; } 
-#newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .item .lb_tag { color: #000; font-size: 13px; font-weight: 300; line-height: 35px; } 
+#newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .item { display: block; width: 100%; height: 35px; background: #fff; border-bottom: 1px solid #e2e7ed; box-sizing: border-box; } 
+#newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .item .lb_tag {display: block; padding-left: 10px;  color: #000; font-size: 13px; font-weight: 300; line-height: 35px; } 
 #newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .inp_chk:checked + .lb_tag { color: #008ae0; } 
 #newMain .moFindBtn .m_find_bottom { width: 100%; height: 50px; position: fixed; bottom: 0; z-index: 200; } 
 #newMain .moFindBtn .m_find_bottom ul { display: flex; height: 50px; box-shadow: 0px 0px 20px 0px rgba(34, 37, 75, 0.4); } 
@@ -429,7 +431,6 @@
 #newHeader .newGnb .depth1 > li > a { justify-content: center; } 
 
 #newMain .pageWrap .innerSection { width: 100%; } 
-
  }
 
 @media screen and (max-width: 860px){
@@ -494,21 +495,21 @@
 #newMain h3.title { margin-bottom: 16px; font-size: 20px; } 
 
 /* 채용 - 정책 태그 */
-#newMain .pageWrap a { height: auto; padding: 10px 0; font-size: 16px; text-align: center; flex-direction: column;} 
-#newMain .pageWrap a.active {flex: 1.5;}
-#newMain .pageWrap.leftPage a.icon02::before {content: none;}
-#newMain .pageWrap.rightPage a.icon01::before {content: none;}
-#newMain .pageWrap a.icon01::before {width: 50px; height: 36px; margin: 0 auto; } 
+#newMain .pageWrap a { height: auto; padding: 10px 0; font-size: 16px; text-align: center; flex-direction: column; } 
+#newMain .pageWrap a.active { flex: 1.5; } 
+#newMain .pageWrap.leftPage a.icon02::before { content: none; } 
+#newMain .pageWrap.rightPage a.icon01::before { content: none; } 
+#newMain .pageWrap a.icon01::before { width: 50px; height: 36px; margin: 0 auto; } 
 #newMain .pageWrap a.icon02::after { content: none; } 
 #newMain .pageWrap a.icon02::before { content: ''; width: 34px; height: 37px; margin: 0 auto; background: url(../../../../page/images/main_2024/main/right_page_icon.png) center no-repeat; background-size: contain; } 
 
 /* 채용 */
 #newMain .orderWrap, #newMain .infoWrap, #newMain .publicWrap, #newMain .recruitWrap, #newMain .enterWrap { padding: 30px 0; } 
-#newMain .jobFind {display: none;}
+#newMain .jobFind { display: none; } 
 
 #newMain .infoWrap ul li a { padding-left: 40px; background-size: 30px !important; } 
 #newMain .infoWrap ul a.icon03 { background-size: 20px auto !important; } 
-#newMain .infoWrap ul .countWrap .count { font-size: 26px; } 
+#newMain .infoWrap ul .countWrap .count { font-size: 30px; } 
 /* 채용 - 대기업 채용관 */
 
 #newMain .recruitWrap .item a { padding: 16px 16px; background-size: 60px auto !important; } 
@@ -517,8 +518,8 @@
 #newMain .recruitWrap .item .tit { margin-bottom: 10px; font-size: 16px; } 
 
 /* 탭 리스트 */
-#newMain .topListWrap { flex-wrap: wrap; gap: 10px 0; } 
-#newMain .topListWrap .moreBtn { font-size: 14px; } 
+#newMain .topListWrap {position: relative;}
+#newMain .topListWrap .moreBtn {position: absolute; top: -40px; right: 0;}
 #newMain .tabWrap .tabList { white-space: nowrap; overflow-x: scroll; } 
 
 
@@ -535,8 +536,8 @@
 #newMain .moFindBtn { display: block; } 
 body[data-chatbot="no"] { #ch-plugin { display: none !important; } 
  #renewFooter { padding-bottom: 50px; } 
+ } 
  }
-}
 
 @media screen and (max-width: 480px){
  #newFooter .f_nav { white-space: nowrap; overflow-x: scroll; } 
