--- a/html/resource/main2024/css/main_2024/style.css
+++ b/html/resource/main2024/css/main_2024/style.css
@@ -227,7 +227,7 @@
  #newMain .slideWrap .item .badgeWrap .tip { display: flex; width: 56px; height: 28px; position: absolute; top: 0; left: 16px; background: #505769; color: #fff; font-size: 12px; font-weight: 300; align-items: center; justify-content: center; } 
  #newMain .slideWrap .item .badgeWrap .tip::after { content: ''; position: absolute; top: 28px; left: 0; border-top: 15px solid #505769; border-right: 28px solid transparent; border-left: 28px solid transparent; } 
  #newMain .slideWrap.policySlide { padding-bottom: 10px; position: relative; } 
- #newMain .slideWrap.policySlide .item { margin-top: 0 !important; margin-bottom: 30px; } 
+ #newMain .slideWrap.policySlide .item { margin-top: 0 !important; margin-bottom: 20px; } 
  #newMain .slideWrap.policySlide .item .txtWrap .tit { margin-bottom: 26px; } 
  #newMain .slideWrap .swiper-pagination { left: 50%; bottom: 0; transform: translateX(-50%); } 
  #newMain .slideWrap .swiper-pagination-bullet { width: 8px; height: 8px; display: inline-block; border-radius: 100%; background: #000; opacity: .2; } 
@@ -288,7 +288,7 @@
 #newMain .jobFindWrap .jobSelect .selectItem { flex: 1; } 
 #newMain .jobFindWrap .jobSelect .select_style01 { width: 100%; height: 38px; padding: 0 8px; background: #fff url(../../../../page/images/main_2024/main/ico_btn_style01.png) center right 10px no-repeat; color: #000; font-size: 14px; font-family: inherit; font-weight: 300; border: solid 1px #e2e2e2; border-radius: 5px; cursor: pointer; } 
 #newMain .orderWrap { padding: 65px 0; } 
-#newMain .jobSlideWrap.orderSlide .item { margin-top: 0 !important; margin-bottom: 30px; } 
+#newMain .jobSlideWrap.orderSlide .item { margin-top: 0 !important; margin-bottom: 20px; } 
 #newMain .infoWrap .infoSlide { max-width: 1180px; margin: 0 auto; } 
 #newMain .infoWrap { padding: 60px 0; background: #f6f6f6; } 
 #newMain .infoWrap .titWrap { display: flex; margin-bottom: 30px; align-items: center; } 
@@ -303,11 +303,12 @@
 #newMain .infoWrap ul .countWrap .count span { margin-left: 10px; color: #6b6b6b; font-size: 14px; font-weight: 300; } 
 #newMain .infoWrap ul .txt { color: #6b6b6b; font-size: 14px; font-weight: 500; } 
 #newMain .jobSlideWrap .item { background: #fff; border: 1px solid #dfdfdf; border-radius: 10px; box-sizing: border-box; } 
+#newMain .jobSlideWrap .swiper-pagination {display: none;}
  #newMain .jobSlideWrap .item a { display: block; position: relative; box-sizing: border-box; } 
  #newMain .jobSlideWrap .item:hover a { box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1); } 
  #newMain .jobSlideWrap .item:hover a::before { content: ''; position: absolute; top: -1px; left: -1px; right: -1px; bottom: -1px; border: 2px solid #2a61f9; border-radius: 10px; z-index: 10; } 
  #newMain .publicWrap { padding: 65px 0; } 
- #newMain .jobSlideWrap.publicSlide .item { margin-top: 0 !important; margin-bottom: 30px; } 
+ #newMain .jobSlideWrap.publicSlide .item { margin-top: 0 !important; margin-bottom: 20px; } 
  #newMain .jobSlideWrap .item { background: #fff; border: 1px solid #dfdfdf; border-radius: 10px; box-sizing: border-box; } 
  #newMain .jobSlideWrap .item .listTop { padding: 20px 20px 14px; } 
  #newMain .jobSlideWrap .item .jobArea .area { padding-left: 20px; margin-bottom: 10px; position: relative; color: #000; font-size: 13px; font-weight: 300; } 
@@ -324,9 +325,9 @@
  #newMain .jobSlideWrap .item .listBottom { padding: 6px 20px 10px; border-top: 1px solid #dfdfdf; } 
  #newMain .jobSlideWrap .item .listBottom .etc { color: #777777; font-size: 12px; } 
  #newMain .enterWrap { padding: 65px 0; } 
- #newMain .jobSlideWrap.enterSlide .item { margin-top: 0 !important; margin-bottom: 30px; } 
+ #newMain .jobSlideWrap.enterSlide .item { margin-top: 0 !important; margin-bottom: 20px; } 
  #newMain .recruitWrap { padding: 60px 0; background: #f3f4f7; } 
- #newMain .recruitWrap .recruitSlide .item { margin-top: 0 !important; margin-bottom: 30px; } 
+ #newMain .recruitWrap .recruitSlide .item { margin-top: 0 !important; margin-bottom: 20px; } 
  #newMain .recruitWrap .item:hover a { box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1); } 
  #newMain .recruitWrap .item a { display: block; padding: 26px 40px; background-color: #fff; background-position: right 10px bottom 10px; background-repeat: no-repeat; border-radius: 10px; } 
  #newMain .recruitWrap .item a.type01 { background-image: url(../../../../page/images/main_2024/main/recruit_bg01.png); border: 1px solid #d02337; } 
@@ -338,7 +339,7 @@
  #newMain .recruitWrap .item .logoImg { display: flex; height: 42px; margin-bottom: 15px; align-items: center; } 
  #newMain .recruitWrap .item .tit { margin-bottom: 16px; color: #000; font-size: 18px; font-weight: 500; } 
  #newMain .recruitWrap .item .txt { color: #444444; font-size: 14px; font-weight: 300; } 
- #newMain .indWrap .indSlide .item { margin-top: 0 !important; margin-bottom: 30px; } 
+ #newMain .indWrap .indSlide .item { margin-top: 0 !important; margin-bottom: 20px; } 
 
  /* footer */
  #newFooter { background: #fff; } 
@@ -393,15 +394,16 @@
 #newMain .moFindBtn .m_find_top .tit { display: block; color: #000; font-size: 14px; font-weight: 500; } 
 #newMain .moFindBtn .m_find_top .tit_wrap .mo_btn_close { width: 18px; height: 18px; background: url(../../../../page/images/main_2024/main/close_type03_icon.png); border: none; } 
 #newMain .moFindBtn .m_find_top .mo_content { display: flex; } 
-#newMain .moFindBtn .m_find_top .mo_cont_list li { width: 90px; height: 35px; border-bottom: 1px solid #dfdfdf; } 
+#newMain .moFindBtn .m_find_top .mo_cont_list li { width: 90px; height: 50px; border-bottom: 1px solid #dfdfdf; } 
 #newMain .moFindBtn .m_find_top .mo_cont_list button { display: block; width: 100%; height: 100%; background: #f3f3f3; color: #777777; font-size: 13px; border: none; } 
 #newMain .moFindBtn .m_find_top .mo_cont_list li.active button { background: #fff; } 
-#newMain .moFindBtn .m_find_top .mo_cont_Wrap { width: 100%; height: 140px; border: 1px solid #dfdfdf; border-top: none; border-right: none; overflow-y: scroll; } 
-#newMain .moFindBtn .m_find_top .mo_cont_Wrap.type02 { height: 245px; } 
+#newMain .moFindBtn .m_find_top .mo_cont_Wrap { width: 100%; height: 200px; border: 1px solid #dfdfdf; border-top: none; border-right: none; overflow-y: scroll; } 
+#newMain .moFindBtn .m_find_top .mo_cont_Wrap.type02 { height: 350px; } 
 #newMain .moFindBtn .m_find_top .mo_cont_Wrap .mo_cont_box { display: none; } 
 #newMain .moFindBtn .m_find_top .mo_cont_Wrap .mo_cont_box.active { display: block; } 
-#newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .item { display: block; width: 100%; height: 35px; background: #fff; border-bottom: 1px solid #e2e7ed; box-sizing: border-box; } 
-#newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .item .lb_tag { display: block; padding-left: 10px; color: #000; font-size: 13px; font-weight: 300; line-height: 35px; } 
+#newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .item { display: block; width: 100%; height: 50px; background: #fff; border-bottom: 1px solid #e2e7ed; box-sizing: border-box; } 
+#newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .item:last-child { border-bottom: 0; } 
+#newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .item .lb_tag { display: block; padding-left: 10px; color: #000; font-size: 13px; font-weight: 300; line-height: 50px; } 
 #newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .inp_chk:checked + .lb_tag { color: #008ae0; } 
 #newMain .moFindBtn .m_find_bottom { width: 100%; height: 50px; position: fixed; bottom: 0; z-index: 200; } 
 #newMain .moFindBtn .m_find_bottom ul { display: flex; height: 50px; box-shadow: 0px 0px 20px 0px rgba(34, 37, 75, 0.4); } 
@@ -411,7 +413,7 @@
 #newMain .moFindBtn .m_find_bottom .btn_pop_open { background: #008ae0; color: #fff; font-size: 14px; font-weight: 500; } 
 #newMain .moFindBtn .m_find_bottom .btn_search { display: none; background: #008ae0; color: #fff; font-size: 14px; font-weight: 500; } 
 #newMain .moFindBtn .m_find_bottom ul button { display: block; width: 100%; height: 100%; border: none; } 
-
+#newMain .moFindBtn .noneBox { height: 40px; background: #fff; } 
 
 @media screen and (max-width: 1300px){
  #newHeader .innerSection { width: calc(100% - 20px); } 
@@ -450,6 +452,10 @@
 #newMain .mainBanner .changed.swiper-slide-active .imgWrap { transform:none; } 
 #newMain .mainBanner .changing.swiper-slide-active,
 #newMain .mainBanner .changed.swiper-slide-active { transform:none; border-radius: 20px; } 
+
+#newMain .jobSlideWrap { position: relative; padding-bottom: 20px;} 
+#newMain .jobSlideWrap .swiper-pagination { display: block; left: 50%; transform: translateX(-50%); bottom: 0; } 
+#newMain .jobSlideWrap .swiper-pagination-clickable .swiper-pagination-bullet { margin: 0 2px; } 
 
 /* 채용 - 채용찾기 */
 #newMain .jobFindWrap .cateWrap { gap: 20px 0; } 
@@ -507,11 +513,18 @@
 #newMain .orderWrap, #newMain .infoWrap, #newMain .publicWrap, #newMain .recruitWrap, #newMain .enterWrap { padding: 30px 0; } 
 #newMain .jobFind { display: none; } 
 
+#newMain .infoWrap .innerSection { width: 100%; padding-left: 10px; } 
+#newMain .indWrap .indSlide .item,
+#newMain .jobSlideWrap.publicSlide .item,
+#newMain .jobSlideWrap.orderSlide .item { margin-bottom: 10px; } 
 #newMain .infoWrap ul li a { padding-left: 40px; background-size: 35px !important; } 
 #newMain .infoWrap ul a.icon03 { background-size: 20px auto !important; } 
 #newMain .infoWrap ul .countWrap .count { font-size: 34px; } 
-/* 채용 - 대기업 채용관 */
 
+
+
+/* 채용 - 대기업 채용관 */
+#newMain .recruitWrap .innerSection { width: 100%; padding-left: 10px; } 
 #newMain .recruitWrap .item a { padding: 16px 16px; background-size: 60px auto !important; } 
 #newMain .recruitWrap .item .logoImg { height: 34px; padding: 8px; margin-bottom: 10px; } 
 #newMain .recruitWrap .item .logoImg img { width: 100%; height: 100%; object-fit: contain; } 
@@ -529,6 +542,11 @@
 /* 정책 */
 #newMain .policyFind, #newMain .issueWrap, #newMain .tipWrap { padding: 30px 0; } 
 #newMain .policyWrap { display: none; } 
+
+#newMain .policyFind .innerSection,
+#newMain .issueWrap .innerSection,
+#newMain .tipWrap .innerSection { width: 100%; padding-left: 10px; } 
+#newMain .policyFind .topListWrap .moreBtn { right: 10px; } 
 
 /* 정책 - 잡아바 정책찾기 */
 #newMain .slideWrap .item .imgWrap { height: 150px; } 
