--- a/html/resource/main2024/css/main_2024/style.css
+++ b/html/resource/main2024/css/main_2024/style.css
@@ -394,11 +394,12 @@
 #newMain .moFindBtn .m_find_top .tit { display: block; color: #000; font-size: 14px; font-weight: 500; } 
 #newMain .moFindBtn .m_find_top .tit_wrap .mo_btn_close { width: 18px; height: 18px; background: url(../../../../page/images/main_2024/main/close_type03_icon.png); border: none; } 
 #newMain .moFindBtn .m_find_top .mo_content { display: flex; } 
+#newMain .moFindBtn .m_find_top .mo_cont_list {background: #f3f3f3;}
 #newMain .moFindBtn .m_find_top .mo_cont_list li { width: 90px; height: 50px; border-bottom: 1px solid #dfdfdf; } 
 #newMain .moFindBtn .m_find_top .mo_cont_list button { display: block; width: 100%; height: 100%; background: #f3f3f3; color: #777777; font-size: 13px; border: none; } 
 #newMain .moFindBtn .m_find_top .mo_cont_list li.active button { background: #fff; } 
-#newMain .moFindBtn .m_find_top .mo_cont_Wrap { width: 100%; height: 200px; border: 1px solid #dfdfdf; border-top: none; border-right: none; overflow-y: scroll; } 
-#newMain .moFindBtn .m_find_top .mo_cont_Wrap.type02 { height: 350px; } 
+#newMain .moFindBtn .m_find_top .mo_cont_Wrap { width: 100%; height: 250px; border: 1px solid #dfdfdf; border-top: none; border-right: none; overflow-y: scroll; } 
+#newMain .moFindBtn .m_find_top .mo_cont_Wrap.type02 { height: 400px; } 
 #newMain .moFindBtn .m_find_top .mo_cont_Wrap .mo_cont_box { display: none; } 
 #newMain .moFindBtn .m_find_top .mo_cont_Wrap .mo_cont_box.active { display: block; } 
 #newMain .moFindBtn .m_find_top .mo_cont_Wrap .m_check_list .item { display: block; width: 100%; height: 50px; background: #fff; border-bottom: 1px solid #e2e7ed; box-sizing: border-box; }  
@@ -412,8 +413,6 @@
 #newMain .moFindBtn .m_find_bottom .btn_pop_open { background: #008ae0; color: #fff; font-size: 14px; font-weight: 500; } 
 #newMain .moFindBtn .m_find_bottom .btn_search { display: none; background: #008ae0; color: #fff; font-size: 14px; font-weight: 500; } 
 #newMain .moFindBtn .m_find_bottom ul button { display: block; width: 100%; height: 100%; border: none; } 
-#newMain .moFindBtn .noneBox { height: 50px; background: #fff; }
-#newMain .moFindBtn .noneBox::before {content: '';display: block; width: 90px; height: 100%; background: #f3f3f3; border-right: 1px solid #e2e7ed;}
 
 @media screen and (max-width: 1300px){
  #newHeader .innerSection { width: calc(100% - 20px); } 
