--- a/html/page/css/aiAbility.css
+++ b/html/page/css/aiAbility.css
@@ -134,6 +134,7 @@ html { overflow: initial; }
 .aiResult_wrap .tab_navi_wrap .tab_navi .resultState.on svg { fill:#fff; } 
 
 /* 2024.07.01 합격 면접 자료 */
+.aiAbility .noData { display: flex; width: 100%; padding: 30px 0; color: #000; font-size: 16px; align-items: center; justify-content: center; align-items: center; } 
 .aiAbility .innerSection02 { max-width: 1080px; width: calc(100% - 20px); padding: 0; margin: 0 auto; } 
 .aiAbility .cont06 .innerSection { padding-top: 110px; } 
 .aiAbility .cont06 h3 span { margin-left: 20px; color: #666666; font-size: 18px; font-weight: 300; } 
