--- a/html/page/css/aiAbility.css
+++ b/html/page/css/aiAbility.css
@@ -145,7 +145,7 @@ html { overflow: initial; }
 .aiAbility .cont06 .tabList li:first-child { border-right: 1px solid #cfcfcf; } 
 .aiAbility .cont06 .tabList li.active a::before { content: ''; width: 100%; height: 6px; position: absolute; left: 0; top: 0; background: #008ae0; } 
 .aiAbility .cont06 .tabList li.active a { background: #fff; color: #000; border-bottom: 0; } 
-.aiAbility .cont06 .tabList li a { display: block; padding: 20px 0; position: relative; background: #f9f9f9; color: #999999; font-size: 24px; font-weight: 500; text-align: center; border-bottom: 1px solid #cfcfcf; } 
+.aiAbility .cont06 .tabList li a { display: block; padding: 20px 0; position: relative; background: #f9f9f9; color: #999999; font-size: 20px; font-weight: 500; text-align: center; border-bottom: 1px solid #cfcfcf; } 
 .aiAbility .cont06 .tabCont .tabItem { display: none; } 
 .aiAbility .cont06 .tabCont .tabItem.active { display: block; } 
 .aiAbility .cont06 .tabArea { display: flex; margin-bottom: 60px; background: #fff; border: 1px solid #cfcfcf; border-top: 0; } 
@@ -153,8 +153,8 @@ html { overflow: initial; }
 .aiAbility .cont06 .guideWrap .guideList { border: 1px solid #cfcfcf; border-left: 0; border-bottom: 0; } 
 .aiAbility .cont06 .guideWrap .guideList li { border-bottom: 1px solid #ededed; } 
 .aiAbility .cont06 .guideWrap .guideList li:last-child { border-bottom: 0; } 
-.aiAbility .cont06 .guideWrap .guideList li button { display: block; width: 100%; padding: 12px 0 12px 25px; color: #666666; font-size: 18px; text-align: left; border: 0; } 
-.aiAbility .cont06 .guideWrap .guideList li.active button { font-weight: 900; } 
+.aiAbility .cont06 .guideWrap .guideList li button { display: block; width: 100%; padding: 12px 0 12px 25px; color: #666666; font-size: 14px; text-align: left; border: 0; } 
+.aiAbility .cont06 .guideWrap .guideList li.active button { color: #008ae0; font-weight: 900; } 
 .aiAbility .cont06 .guideWrap .guideList li button:focus { border: 0; outline: 0; } 
 .aiAbility .cont06 .resultWrap { width: 100%; } 
 .aiAbility .cont06 .resultWrap .resultList > li:last-child { border-bottom: 0; } 
